--- a/popup.css
+++ b/popup.css
@@ -1,30 +1,40 @@
 body {
-    background: #f1f5f9;
+    background-image: linear-gradient(to right top, #13f2bd, #00e4f1, #00cfff, #00b1ff, #a48aff, #a686fb, #a781f8, #a97df4, #3b9bff, #00affa, #00bad9, #0bbfb4);
+
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
 }
 .Parent{
     width:500px;
-    border:1px solid red;
+    /* border:1px solid red; */
     display: flex;
-    gap:3px
+    gap:20px
 }
 .Parent2{
     width:500px;
-    border:1px solid red;
+    border:1px solid rgb(27, 26, 26);
     display: flex;
-    gap:3px
+    gap:3px;
+    margin-top: 20px;
+    border-radius: 3px;
+    background-color: white;
 }
 .wrapper {
+   
     width: 250px;
     text-align: center;
-    border:1px solid green;
+    border:1px solid rgb(24, 24, 24);
 }
 .changeColorBtn {
     width: 120px;
     outline: none;
     border: none;
-    border-radius: 2px;
+    border-radius: 5px;
+    font-weight: bold;
     padding: 5px;
-    background: #facc15;
+    padding: 10px;
+    background: #e24483;
     cursor: pointer;
 }
 .colorGrid {
@@ -55,7 +65,7 @@ body {
     margin-left: 5px;
     font-weight: bold;
     display: flex;
-    border :1px solid red;
+    /* border :1px solid red; */
     gap:1px
     
 }
@@ -66,84 +76,215 @@ body {
 #select{
     font-weight: bold;
     margin: auto;
+   
 
 }
 #clear{
-    width: 120px;
+    width: 168px;
     outline: none;
     border: none;
     border-radius: 2px;
-    padding: 5px;
+    padding: 6px;
     cursor: pointer;
+    margin-top: 15px;
+    font-weight: bold;
+    border-radius: 3px;
     background-color: rgba(145, 243, 53, 0.842);
 }
 
 #Selected{
 
-    width: 120px;
+    width: 80px;
     outline: none;
     border: none;
     border-radius: 2px;
     padding: 5px;
     cursor: pointer;
-    background-color: rgba(219, 212, 219, 0.842);
+    margin-left: 5px;
+    font-weight: bold;
+    border: 1px solid;
+    /* background-color: rgba(219, 212, 219, 0.842); */
+}
+.rightleft{
+    /* background-color: #d33272; */
+    padding: 5px;
+    font-weight: bold;
+    width: 80px;
+}
+
+.showColor{
+    margin-left: 50px;
+}
+#colorValue{
+    margin-top: -20px;
+    margin-bottom: 10px;
 }
 #Colors{ 
     display: grid;
-    grid-template-columns: repeat(8,1fr);
+    grid-template-columns: repeat(10,1fr);
    padding:5px;
-    /* gap:2px; */
+    gap:10px;
     height: 50px;
-    width:240px;
+    align-items: center;
+    /* width:240px; */
     margin:auto;
     margin-top: 5px;
-    border:1px solid rgb(86, 19, 163);
+    /* border:1px solid rgb(86, 19, 163); */
 }
 #side{
     display:flex;
     gap:2px;
     margin:auto;
-    height:50px;
+    border-radius: 5px;
+    /* height:50px; */
     padding: 5px;
-    width: 140px;
-    border:1px solid rgb(70, 185, 85)
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 80px;
+    border:1px solid rgb(28, 29, 28)
 }
 .Common{
-    height: 15px;
-    width:15px;
+    height: 25px;
+    width:25px;
+    border-radius: 50%;
     border: 1px solid rgb(17, 17, 17);
     
 }
+#value{
+font-weight: bold;
+
+}
+
+#select_color{
+    font-weight: bold;
+}
 .red{
     background-color: red;
-   
+}
+.red:hover{
+   width: 30px;
+   height: 30px;
+   border-radius: 50%;
 }
 .green{
     background-color: green;
 }
+.green:hover{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+ }
 .yellow{
     background-color: yellow;
 }
+.yellow:hover{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+ }
 .orange{
     background-color: orange;
 }
+.orange:hover{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+ }
 .white{
     background-color: white;
 }
+.white:hover{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+ }
 .blue{
     background-color: blue;
 }
+.blue:hover{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+ }
 .brown{
     background-color: brown;
 }
+.brown:hover{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+ }
 .black{
     background-color: black;
 }
+.black:hover{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+ }
 .purple{
     background-color: purple;
 }
+.purple:hover{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+ }
 .pink{
     background-color: pink;
 }
+.pink:hover{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+ }
 
+.topTitle{
+    text-align: center;
+    font-size: 25px;
+    color: white;
+}
+.rightbox{
+    border: 1px solid;
+    border-radius: 3px;
+    background-color: white;
+    border-radius: 5px;
+}
 
+.leftbox{
+    border-radius: 3px;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.bottom{
+    border: 1px solid;
+    margin-top: 20px;
+    display: flex;
+    gap: 20px;
+    background-color: white;
+    border-radius: 5px;
+}
+.bottomLeft{
+    padding: 15px;
+}
+#bottomRightMain{
+    /* display: flex; */
+    /* gap: 5px; */
+    margin-top: 10px;
+    border: 1px solid rgb(78, 76, 76);
+    /* background-color: red; */
+    width: 100px;
+    height: 40px;
+}
+#input1{
+    padding: 8px;
+    font-size: 15px;
+    font-weight: bold;
+    /* background-color: #0aecd4; */
+  
+}
+#bottomBtn{
+    padding: 8px;
+    background-color: #e24483;
+}
